# flask-boilerplate

./: .gitignore  config.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: __init__.py  extensions.py
app/auth/: routes.py
app/main/: routes.py
app/models/: user.py
app/static/css/: output.css
app/templates/: base.html  index.html
app/templates/auth/: login.html  signup.html
app/templates/main/: dashboard.html
