[tool.poetry]
name = "flask-boilerplate"
version = "0.1.0"
description = ""
authors = ["Navan Chauhan <navanchauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-admin = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
